Format the options in the dropdown (#222)
* Format the options in the dropdown

* Fix the test

* Review comment fixes
